<resources>
    <string name="app_name">What\'s in my pant..ry</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_add_item">Search Item</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="add_item">add item</string>
    <string name="button_search">Search</string>
    <string name="empty_not_saved">Item not saved</string>
    <string name="title_activity_login">Login</string>
    <string name="login_button_string">login</string>
    <string name="action_register">register</string>
    <string name="switch_to_login">Login instead</string>
    <string name="switch_to_register">Register instead</string>
    <string name="prompt_username">Pick your username!</string>
    <string name="invalid_email">Not a valid email address</string>
    <string name="register_failed">Registration failed</string>
    <string name="access_token_key">accessToken</string>
    <string name="auth_data_file">auth_data</string>
    <string name="search_hint">Search for a product!</string>
    <string name="search_error">Something went wrong… Try again?</string>
    <string name="search_real_response">Pick your product</string>
    <string name="search_empty_response">Couldn\'t find anything…</string>
    <string name="search_start">Searching…</string>
    <string name="search_init">Search for your product!</string>
    <string name="add_item_button_toolbar">Add item</string>
    <string name="confirm_item_button_toolbar">confirm</string>
    <string name="name_too_short"><![CDATA[Name must be > 3 chars]]></string>
    <string name="low_amount"><![CDATA[Amount must be > 0]]></string>
    <string name="item_name_hint">Pick a name for your item</string>
    <string name="item_description_hint">Input a description for this item</string>
    <string name="item_amount_hint">How many have you got?</string>
    <string name="item_type_hint">What type of item is it?</string>
    <string name="save_item">Save</string>
    <string name="bad_barcode">That\'s not a valid code</string>
    <string name="barcode">code: %1$s</string>
    <string name="login_prompt">Please login or register!</string>
    <string name="login_logged_in">Logged in as: %1$s</string>
    <string name="not_logged_in">You are not logged in</string>
    <string name="title_activity_new_item">Add or edit an item</string>
    <string name="item_name">Item Name:</string>
    <string name="default_type">___</string>
    <string name="missing_propmpt">"You're missing: "</string>
    <string name="export_button_text">Copy to clipboard</string>
    <string name="percentage_prompt">"You have: "</string>
</resources>